# SeriesSorter

./: .gitignore  CMakeLists.txt
src/: main.cpp  main.ih  series-sorter-daemon.service
src/FileReader/: deleteOldDir.cpp  eraseSubStr.cpp  fileReader.cpp  fileReader.h  fileReader.ih  getCurrentPath.cpp  getNameAndSeasonAndEpisodeFromStr.cpp  getNameAndYearFromStr.cpp  getParentDir.cpp  getProperName.cpp  getSeasonAndEpisodeFromStr.cpp  getTime.cpp  hasIgnoredExtension.cpp  hasVideoExtension.cpp  ignoreExtension.cpp  init.cpp  logToFile.cpp  moveFile.cpp  moveOldDirToTrash.cpp  moveOldFileToTrash.cpp  parseFile.cpp  pathFromConfigOption.cpp  processFile.cpp  processFolder.cpp  readConfig.cpp  restoreStdOut.cpp  run.cpp  safeToDelete.cpp  seriesNameFromStr.cpp  toDoubleFormat.cpp  writeConfig.cpp  writeInfoFile.cpp
